# json2csv

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  STORIES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: index.md
ejemplos/: sample.json
script/: bump_build.py  package_project.py
src/json2csv/: __init__.py  cli.py  core.py  exceptions.py  models.py  version.py
tests/: test_cli.py  test_core.py  test_version.py
